# macro-lisp

./: ARCHITECTURE.md  Cargo.toml  README.md  REFERENCE.md  ROADMAP.md
.github/workflows/: ci.yml
examples/: collatz.rs  factorial.rs  fibonacci.rs  fizzbuzz.rs  hello.rs  wc.rs
lisp/: Cargo.toml
lisp-macro/: Cargo.toml
lisp-macro/src/: debug.rs  expr.rs  forms.rs  helpers.rs  items.rs  lib.rs  output.rs  shared.rs
lisp/src/: lib.rs
macro-lisp-cli/: Cargo.toml
macro-lisp-cli/src/: codegen.rs  compiler.rs  loader.rs  main.rs
macro-lisp-repl/: Cargo.toml
macro-lisp-repl/src/: commands.rs  compiler.rs  loader.rs  main.rs  session.rs
scripts/: collatz.lisp  factorial.lisp  fibonacci.lisp  fizzbuzz.lisp  hello.lisp  lisp_interpreter.lisp
src/: lib.rs
tests/: assign.rs  async_unsafe.rs  bindings.rs  collections.rs  complex_let_types.rs  comprehensive.rs  control_flow.rs  core.rs  core_traits.rs  enums.rs  error_handling.rs  error_messages.rs  file.rs  full_program.rs  functions.rs  generic_fn.rs  grammar_spec.rs  impl_blocks.rs  match_expr.rs  module.rs  multi_body.rs  operators.rs  pattern_let.rs  patterns.rs  primitives.rs  references.rs  self_params.rs  showcase.rs  struct_lit.rs  structs.rs  traits.rs  types.rs  unified_dispatch.rs  untyped_closures.rs  visibility.rs  where_clauses.rs
tests/errors/: assign_missing_rhs.rs  assign_missing_rhs.stderr  let_missing_value.rs  let_missing_value.stderr  plus_one_arg.rs  plus_one_arg.stderr
