[package]
name = "macro-lisp-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for running macro-lisp S-expression files"
license = "MIT"

[[bin]]
name = "macro-lisp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
