[package]
name = "macro-lisp-repl"
version = "0.1.0"
edition = "2021"
description = "Interactive REPL for macro-lisp S-expression programs"
license = "MIT"

[[bin]]
name = "macro-lisp-repl"
path = "src/main.rs"

[dependencies]
rustyline = "15.0"
tempfile = "3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
